Removed old network analyses

--- a/Code/02_NetworkAnalysis.Rmd
+++ b/Code/02_NetworkAnalysis.Rmd
@@ -33,152 +33,8 @@ load('/Users/bryanchen/Desktop/Med School/Pre-Clerkships/Research/ABCD/processed
 
 ```
 
-## Test Rhemtulla Network
+## Longitudinal Network
 ```{r}
-
-getAdjMatList <- function(designMat, data){
-  AdjMatList <- NULL
-  lambdaList <- NULL
-  k <- nrow(designMat)
-  
-  for (t in 1:(ncol(designMat) -1)){
-    
-    predictors <- as.matrix(data[, designMat[, t]])
-    
-    adjMat <- matrix(0, k, k)
-    colnames(adjMat) <- designMat[, (t+1)]
-    rownames(adjMat) <- colnames(predictors)
-    
-    lambdaVec <- rep(0,k)
-      
-    for (i in 1:k){
-      
-      set.seed(100)
-      lassoreg <- cv.glmnet(x = predictors, 
-                            y = data[, designMat[i , t+1 ]], 
-                            family = "gaussian", alpha = 1, standardize=TRUE)
-      
-      lambdaVec[i] <- lassoreg$lambda.min
-      
-      adjMat[1:k,i] <- coef(lassoreg, s = lambdaVec[i], exact = FALSE)[2:(k+1)]
-    }
-    
-    AdjMatList[[t]] <- adjMat
-    lambdaList[[t]] <- lambdaVec
-  }
-  return(list(B = AdjMatList, lambdas = lambdaList))
-}
-
-getLavaanSyntax <- function(designMat, model = NULL){
-  
-  k <- nrow(designMat)
-  
-  regressions <- ""
-  resVariances <- ""
-  
-  for (t in 1:(ncol(designMat) -1)){
-    
-    
-    for (i in 1:k){
-      
-      predictors <- designMat[, t]
-      
-      if(!is.null(model)){
-        
-        predictors <- predictors[which(model[[t]][,i] != 0 )]
-        
-      }
-      
-      #regress variable on variables at the previous time point
-      regressions <- paste(regressions, paste(designMat[i,(t+1)], "~", sep = ""), 
-                           paste(predictors, collapse = "+"), "\n")
-      
-      resVariances <- paste(resVariances, paste(designMat[i,(t+1)], "~~", paste(designMat[(i : k), (t+1)], collapse = "+"), sep = ""), "\n")
-    }
-  }
-  
-  
-  return(c(regressions, resVariances))
-}
-
-CreateSigB <- function(B, nonSigParam){
-  
-  sigB <- B
-  
-  if(nrow(nonSigParam) == 0){
-    return(B)
-  }else{
-    for(i in 1: nrow(nonSigParam)){
-      sigB[nonSigParam$rhs[i], nonSigParam$lhs[i]] <- 0
-      
-    }
-    
-    return(sigB)
-  }
-}
-
-CreateSeparateB <- function(B, designMat){
-  
-  BList <- NULL
-  
-  for (t in 1:(ncol(designMat) -1)){
-    
-    k <- nrow(designMat)
-    
-    outcomes <- designMat[, (t + 1)]
-    
-    predictors <- designMat[, t]
-    
-    BList[[t]] <- B[predictors, outcomes]
-    
-  }
-  
-  return(BList)
-}
-
-myfulldata <- baseline_data[complete.cases(baseline_data),]
-
-designMat <- matrix(colnames(myfulldata), )
-```
-
-
-## Test Network
-```{r}
-draw_graph <- function(df) {
-  network <- df %>%
-    estimateNetwork(default = 'EBICglasso', corMethod = 'spearman')
-
-  bootnet_nonpar <- bootnet(network,
-                          nBoots =  1000,
-                          nCores = 8)
-
-  plot(network, 
-     layout = "spring",
-     # groups = traits,
-     label.cex = 0.7, # scalar on label size
-     label.color = 'black', # string on label colors
-     label.prop = 2, # proportion of the width of the node that the label scales
-     
-     # Edges (pp. 33-34)
-     negDashed = T, # should negative edges be dashed?
-     
-     # Legend (p. 35-36)
-     legend.cex = 0.27, # scalar of the legend
-     legend.mode = 'style2', # default is 'style1'
-     # nodeNames = items, # names for each node to plot in legend
-     
-     # Generical graphical arguments (p. 36)
-     font = 2)
-
-  plot(bootnet_nonpar, labels = FALSE, order = 'sample')
-
-  centralityPlot(network, include = "all", orderBy = "ExpectedInfluence")
-}
-
-draw_graph(baseline_data)
-draw_graph(year2_FU)
-draw_graph(year4_FU)
-
 type = rep('g', 31) # Treating as quasi-continuous
 level = rep(1, 31)
 
