--- a/Code/01_CleanData.Rmd
+++ b/Code/01_CleanData.Rmd
@@ -97,11 +97,11 @@ year4_FU <- year4_FU[year4_FU$src_subject_id %in% common_ids, ] #%>%
 save(baseline_data, year2_FU, year4_FU, file = '/Users/bryanchen/Desktop/Med School/Pre-Clerkships/Research/ABCD/processedData.RData')
 
 ###
-baseline_data_summed <- upps_data_clean %>%
-    filter(eventname == 'baseline_year_1_arm_1') %>%
-    left_join(sleep_data_clean, by = join_by(src_subject_id, eventname)) %>% #inclusion of eventname filters baseline data for both
-    rowwise() %>%
-    mutate(sleep_initiation_sum = sum(c_across(ends_with('_i')))) %>% #sums across selected measures
-    mutate(sleep_maintenance_sum = sum(c_across(ends_with('_m')))) %>%
-    select(negative_urgency, lack_of_planning, sensation_seeking, positive_urgency, lack_of_perseverance, duration, ends_with('_sum'))
+# baseline_data_summed <- upps_data_clean %>%
+#     filter(eventname == 'baseline_year_1_arm_1') %>%
+#     left_join(sleep_data_clean, by = join_by(src_subject_id, eventname)) %>% #inclusion of eventname filters baseline data for both
+#     rowwise() %>%
+#     mutate(sleep_initiation_sum = sum(c_across(ends_with('_i')))) %>% #sums across selected measures
+#     mutate(sleep_maintenance_sum = sum(c_across(ends_with('_m')))) %>%
+#     select(negative_urgency, lack_of_planning, sensation_seeking, positive_urgency, lack_of_perseverance, duration, ends_with('_sum'))
 ```
